--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ beautifulsoup4>=4.8.2,<4.8.10
 Pyrogram>=0.16.0,<0.16.10
 TgCrypto>=1.1.1,<1.1.10
 psycopg2-binary
-git+https://gitlab.com/magneto261290/youtube-dl
+git+https://github.com/ytdl-org/youtube-dl
 lxml
 telegraph
